# uncertain-pose-estimation

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: parameters.yaml
launch/: pose_estimator.launch.py
src/: charuco_board.h  charuco_detector.cpp  charuco_detector.h  charuco_pose_estimator.cpp  charuco_pose_estimator.h  corner_factor.cpp  corner_factor.h  create_charuco_target.cpp  main.cpp  pose_estimator_node.cpp  pose_estimator_node.h  test_data_publisher.cpp  test_publisher.cpp
test_data/: camera_matrix.csv  distortion_coefficients.csv  readme.txt
